<resources>
    <string name="app_name">ege</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Главная</string>
    <string name="menu_gallery">Дисциплины</string>
    <string name="menu_slideshow">Учебные заведения</string>

    <string name="ask_number">Вопрос № %s</string>

    <string name="more_details">Подробнее</string>
    <string name="your_points">Ваш балл</string>
    <string name="your_result">Вы набрали</string>
    <string name="max_value">Максимальный балл %s</string>

    <string name="no_last_result">У Вас нет последних результатов.\nПройдите тест, чтобы узнать результат.</string>
    <string name="your_middle_points">Ваш средний балл:</string>

    <string name="points">баллов</string>
    <string name="rysskiu">Русский язык - %s\n</string>
    <string name="matematika">Математика - %s\n</string>
    <string name="fizika">Физика - %s\n</string>
    <string name="informatika">Информатика - %s\n</string>

    <string name="empty_unis_list">Учитывая Ваш средний балл, мы не смогли подобрать подходящих университетов</string>
    <string name="unis_list">Вам может подойти: </string>
    <string name="seconds_point">вторичных баллов</string>
    <string name="first_points">Ваши первичные баллы по предметам:</string>
    <string name="app_name_origin">ЕГЭ 2021</string>
</resources>