<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.deadely.ege.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_discipline"
        android:name="com.deadely.ege.ui.discipline.DisciplineFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_discipline" />

    <fragment
        android:id="@+id/nav_university"
        android:name="com.deadely.ege.ui.university.UniversityFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_university" />
</navigation>