<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.resultlist.ResultListActivity">

    <ImageView
        android:id="@+id/btnClose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_close" />

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:visibility="gone"
        android:layout_alignParentStart="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_arrow_back" />

    <LinearLayout
        android:id="@+id/llResultCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:visibility="gone">

        <TextView
            android:id="@+id/tvDescriptionAskCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:fontFamily="@font/rubik_variable_wght"
            android:gravity="center"
            android:text="@string/your_result"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvAskCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_variable_wght"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="15/15" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_variable_wght"
            android:gravity="center"
            android:text="@string/your_points"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvPoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_variable_wght"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="32 балла " />

        <TextView
            android:id="@+id/tvMaxValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_variable_wght"
            android:gravity="center"
            android:textSize="16sp"
            tools:text="Максимальный балл 32" />

        <TextView
            android:id="@+id/tvMore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            android:fontFamily="@font/rubik_variable_wght"
            android:gravity="center"
            android:text="@string/more_details"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAsks"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_height="match_parent"
        tools:itemCount="1"
        android:overScrollMode="never"
        android:layout_below="@id/btnClose"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        tools:listitem="@layout/row_ask"
        tools:visibility="visible" />
</RelativeLayout>